--- a/shortener.cabal
+++ b/shortener.cabal
@@ -1,10 +1,8 @@
 Name:                shortener
 Version:             0.1
-Synopsis:            Project Synopsis Here
-Description:         Project Description Here
 License:             AllRightsReserved
-Author:              Author
-Maintainer:          maintainer@example.com
+Author:              aldiyen
+Maintainer:          aldiyen@gmail.com
 Stability:           Experimental
 Category:            Web
 Build-type:          Simple
@@ -20,7 +18,7 @@ Executable shortener
     containers                >= 0.0,
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     time,
-    lens                      >= 3.7.6 && < 3.11,
+    lens                      >= 4 && < 5,
     mtl                       >= 2     && < 3,
     snap                      >= 0.11 && < 14,
     snap-core                 >= 0.9 && < 14,
